changed css name to portfolio. Updated html pathway to css with correct css link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/challengeStyle.css">
+    <link rel="stylesheet" href="./assets/css/portfolio.css">
     <title>Muniz Portfolio</title>
 </head>
 
